# meta-parquet-doc

./: README.md  pyproject.toml
examples/: example_pandas.py  example_pyarrow.py  example_pyspark.py
src/meta_parquet_doc/: __init__.py  _metadata_io.py  _schema.py  _types.py  _validation.py  api.py  exceptions.py
src/meta_parquet_doc/_adapters/: __init__.py  _pandas.py  _pyarrow.py  _pyspark.py
tests/: conftest.py  test_api.py  test_metadata_io.py  test_types.py  test_validation.py
tests/test_adapters/: test_pandas.py  test_pyarrow.py
